Fix margin and spacing for buttons.

--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -19,6 +19,11 @@
     padding: 2em 0 2em 0;
   }
 
+  #header header
+  {
+    padding: 2em 0 0em 0;
+  }
+
   .main > .content
   {
     padding: 2em 0 2em 0;
