--- a/css/style.css
+++ b/css/style.css
@@ -650,6 +650,7 @@
 			color: #fff;
 			text-align: center;
 			text-decoration: none;
+			margin: 0 0.5em 0 0.5em;
 			-moz-transition: all 0.25s ease-in-out;
 			-webkit-transition: all 0.25s ease-in-out;
 			-o-transition: all 0.25s ease-in-out;
